@@ -609,6 +609,7 @@ namespace aux {
 	void session_impl::set_port_filter(port_filter const& f)
 	{
 		m_port_filter = f;
+		// TODO: recalculate all connect candidates for all torrents
 	}
 
 	void session_impl::set_ip_filter(ip_filter const& f)
